--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="icon" href="UDE_LOGO.png">
 
     
-
+<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body >
 
